WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169047
IsSmartPtr<WKRetainPtr<T>>::value should not be exported
https://bugs.webkit.org/show_bug.cgi?id=169047
Summary
IsSmartPtr<WKRetainPtr<T>>::value should not be exported
Aakash Jain
Reported
2017-03-01 11:23:26 PST
This symbol from UIProcess/API/cpp/WKRetainPtr.h is not used by other projects. No headers contains this symbol. We should not export this symbol.
Attachments
Proposed patch
(1.06 KB, patch)
2017-03-01 11:24 PST
,
Aakash Jain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Aakash Jain
Comment 1
2017-03-01 11:24:43 PST
Created
attachment 303088
[details]
Proposed patch
Alexey Proskuryakov
Comment 2
2017-03-01 12:53:11 PST
The reason why this is needed is that this header is a private one, used by WebKit tools. But I don't think that there is any reason to have the symbol exported.
WebKit Commit Bot
Comment 3
2017-03-02 15:42:16 PST
Comment on
attachment 303088
[details]
Proposed patch Clearing flags on attachment: 303088 Committed
r213312
: <
http://trac.webkit.org/changeset/213312
>
WebKit Commit Bot
Comment 4
2017-03-02 15:42:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug