IsSmartPtr<WKRetainPtr<T>>::value should not be exported https://bugs.webkit.org/show_bug.cgi?id=169047

Reviewed by Alexey Proskuryakov.

* UIProcess/API/cpp/WKRetainPtr.h:


Canonical link: https://commits.webkit.org/186102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213312 268f45cc-cd09-0410-ab3c-d52691b4dbfc